assets/css/responsive.css
.layout__menu-togle{
    display: none;
}

@media(max-width: 1490px){
    body{
        padding: 0;
    }
    .layout{
        min-width: auto;
        width: 85%;
    }
}
@media(max-width:1320px){
    .layout{
        width: 89%;
        margin-left: 3rem;
    }
}
@media(max-width:1160px) {
    .layout{
        width: 85%;
        margin-left: 4rem;
    }
    .certificates__certificate{
        flex-basis: 100%;
    }
}
@media(max-width:1060px) {
    body{
        background-image: none;
        position: static;
    }
    .layout{
        width: 100%;
        height: 100%;
        min-height: 100%;
        margin: 0;
        border-radius: 0;
        grid-template-areas: 'content';
        grid-template-columns: 100%;
    }
    .layout__menu-togle{
        z-index:1000;
        display: block;
        position: absolute;
        width: 4.8rem;
        height: 4.8rem;
        line-height: 4.8rem;
        text-align: center;
        background-color: var(--color-secondary);
        right: 1rem;
        top: 1rem;
        font-size: 2.5rem;
        border-radius: 3rem;
        color: var(--color-principal);
        cursor: pointer;
        transition: all 300ms ease-in-out;
        -webkit-border-radius: 3rem;
        -moz-border-radius: 3rem;
        -ms-border-radius: 3rem;
        -o-border-radius: 3rem;
        -webkit-transition: all 300ms ease-in-out;
        -moz-transition: all 300ms ease-in-out;
        -ms-transition: all 300ms ease-in-out;
        -o-transition: all 300ms ease-in-out;
    }
    .menu-togle__icon{
        color: var(--color-principal);
        display: block;
        position: absolute;
        top: 25%;
        left: 28%;
        transition: all 300ms ease-in-out;
        -webkit-transition: all 300ms ease-in-out;
        -moz-transition: all 300ms ease-in-out;
        -ms-transition: all 300ms ease-in-out;
        -o-transition: all 300ms ease-in-out;
}
    .fa-bars{
        opacity: 1;
    }
    .fa-xmark{
        opacity: 0;
    }
    .layout__aside{
        display: block;
        position: absolute;
        max-width: 33rem;
        top: 0;
        right: 0;
        bottom: 0;
        border-radius: 0;
        text-align: center;
        overflow: auto;
        transition: all 300ms ease-in-out;
        z-index: 999;
        -webkit-border-radius: 0;
        -moz-border-radius: 0;
        -ms-border-radius: 0;
        -o-border-radius: 0;
        -webkit-transition: all 300ms ease-in-out;
        -moz-transition: all 300ms ease-in-out;
        -ms-transition: all 300ms ease-in-out;
        -o-transition: all 300ms ease-in-out;
        margin-right: -100%;
        opacity: 0;

        
    }
    .layout__aside--visible{
        width: 100%;
        margin-right: 0;
        opacity: 1;
    }
    .layout__aside--hidden{
        margin-right: -100%;
        opacity: 0;
    }
    .layout__menu{
        position: static;
        margin: 3rem 0;
    }
    .layout__content{
        border-radius: 0;
        background-color: transparent;
        height: 100%;
        width: 100%;
        -webkit-border-radius: 0;
        -moz-border-radius: 0;
        -ms-border-radius: 0;
        -o-border-radius: 0;
    }
    .user-info__container-image{
        width: 13rem;
        margin-top: 3rem;
        display: inline-block;

    }
    .user-info__name{
        font-size: 3rem;
        margin-top: 0.5rem;
        margin-bottom: 1rem;
    }
    .menu__icon{
        display: none;
    }
    .menu__list{
        position: static;
        width: 100%;
        background-color: var(--color-secondary);
        box-shadow: none;
        margin-left: 0;
        padding: 0;
        min-height: auto;
    }
    .menu__link{
        text-decoration: none;
        display: block;
        padding: 1.2rem 0;
    }
    .menu__overlay{
        position: static;
        opacity: 0.7;
        margin-top: 0;
        padding: 0;
        box-shadow: 0;
        font-size: 1.6rem;
        line-height: 2.5rem;
    }
    .menu__link--active .menu__overlay{
        opacity: 1;
    }
    .links__social{
        margin-top: 0;
    }
    .user-info__footer{
        position: static;
        padding-bottom: 2rem;
    }

    .content__page{
        border-radius: 0;
        height: 100vh;
        -webkit-border-radius: 0;
        -moz-border-radius: 0;
        -ms-border-radius: 0;
        -o-border-radius: 0;
    }
    .layout__menu{
        position: static;
    }
    

}

@media(max-width:800px){
    .resume__container{
        flex-direction: column;
    }
    .reviews__review{
        margin-top: 6rem;
        flex-basis: 100%;
    }
    .clients__container{
        flex-wrap: wrap;
        justify-content: space-around;
    }
    .prices__container{
        flex-direction: column;
    }
    .prices__box{
        flex-basis: 100%;
        margin: 0;
    }
    .prices__box:last-child{
        margin-top: 2rem;
    }
    .gallery__item{
        flex-basis: 50%;
    }
    .articles__article{
        flex-basis: 100%;
    }


}
@media(max-width:585px){
    .about__personal-info{
        flex-direction: column;    
    }
    .personal-info__data{
        flex-basis: 100%;
        padding: 0;
        margin-top: 2rem;
    }    
    .services__container{
        flex-direction: column;
        
    }
    .services__service{
        flex-basis: 100%;
        margin-right: 0;
        margin-bottom: 3rem;
    }
    .extra__container{
        flex-direction: column;
        gap: 2rem;
    }

    .resume__container{
        flex-direction: column;
    }
    .resume__right{
        flex-basis: 100%;
        padding: 0;
        margin-bottom: 3rem;
    }
    .contact_container{
        flex-direction: column;
    }

}
@media (max-width:480px) {
    .page__name{
        font-size: 4.8rem;
        line-height: 5.6rem;
        text-align: center;
    }
    .certificate__logo{
        width: 100%;
    }
    .gallery__item{
        flex-basis: 100%;
    }
    .form__container{
        display: flex;
        flex-direction: column;
    }
    .form__left{
        flex-basis: 100%;
        margin-right: 0;
    }
    .form__right{
        flex-basis: 100%;
        max-width: 100%;
        max-height: 100%;
    }
}

